@@ -1857,256 +1857,6 @@ int vlad_polbase::decode_fact(vlad_fact **a_fact,
   return VLAD_OK;
 }
 
-#if 0
-
-/*
- * verifies that s, a and o are in the symtab and that they are of the
- * right type, or listed in vlist if vlist is non-null
- */
-int vlad_polbase::verify_fact_holds(const char *a_sub,
-                                    const char *a_acc,
-                                    const char *a_obj,
-                                    vlad_stringlist *a_vlist)
-{
-  int retval;
-  unsigned char type;
-
-  if (a_sub == NULL || a_acc == NULL || a_obj == NULL)
-    return VLAD_NULLPTR;
-
-  /* check subject */
-  switch((retval = m_stable->type(a_sub, &type))) {
-    case VLAD_OK :
-      /* in symtab so check if it is a subject */
-      if (!VLAD_IDENT_IS_SUBJECT(type))
-        return VLAD_INVALIDINPUT;
-      break;
-    case VLAD_NOTFOUND :
-      /* not in symtab */
-      if (a_vlist == NULL)
-        return VLAD_INVALIDINPUT;
-      /* if this is a non-ground fact, check in the var list */
-      if ((retval = a_vlist->find(a_sub)) != VLAD_OK)
-        return (retval == VLAD_NOTFOUND) ? VLAD_INVALIDINPUT : retval;
-      break;
-    default :
-      return retval;
-  }
-
-  /* check access */
-  switch((retval = m_stable->type(a_acc, &type))) {
-    case VLAD_OK :
-      /* in symtab so check if it is an access */
-      if (!VLAD_IDENT_IS_ACCESS(type))
-        return VLAD_INVALIDINPUT;
-      break;
-    case VLAD_NOTFOUND :
-      /* not in symtab */
-      if (a_vlist == NULL)
-        return VLAD_INVALIDINPUT;
-      /* if this is a non-ground fact, check in the var list */
-      if ((retval = a_vlist->find(a_acc)) != VLAD_OK)
-        return (retval == VLAD_NOTFOUND) ? VLAD_INVALIDINPUT : retval;
-      break;
-    default :
-      return retval;
-  }
-
-  /* check object */
-  switch((retval = m_stable->type(a_obj, &type))) {
-    case VLAD_OK :
-      /* in symtab so check if it is an object */
-      if (!VLAD_IDENT_IS_OBJECT(type))
-        return VLAD_INVALIDINPUT;
-      break;
-    case VLAD_NOTFOUND :
-      /* not in symtab */
-      if (a_vlist == NULL)
-        return VLAD_INVALIDINPUT;
-      /* if this is a non-ground fact, check in the var list */
-      if ((retval = a_vlist->find(a_obj)) != VLAD_OK)
-        return (retval == VLAD_NOTFOUND) ? VLAD_INVALIDINPUT : retval;
-      break;
-    default :
-      return retval;
-  }
-
-  return VLAD_OK;
-}
-
-/*
- * verifies that e and g are in the symtab and that they are of the right
- * type, or listed in vlist if vlist is non-null
- */
-int vlad_polbase::verify_fact_memb(const char *a_elt,
-                                   const char *a_grp,
-                                   vlad_stringlist *a_vlist)
-{
-  int retval;
-  unsigned char type_elt;
-  unsigned char type_grp;
-  bool var = false;
-
-  if (a_elt == NULL || a_grp == NULL)
-    return VLAD_NULLPTR;
-
-  /* check element */
-  switch((retval = m_stable->type(a_elt, &type_elt))) {
-    case VLAD_OK :
-      /* in symtab so check if it is a non-group */
-      if (VLAD_IDENT_IS_GROUP(type_elt))
-        return VLAD_INVALIDINPUT;
-      break;
-    case VLAD_NOTFOUND :
-      /* not in symtab */
-      if (a_vlist == NULL)
-        return VLAD_INVALIDINPUT;
-      /* if this is a non-ground fact, check in the var list */
-      if ((retval = a_vlist->find(a_elt)) != VLAD_OK)
-        return (retval == VLAD_NOTFOUND) ? VLAD_INVALIDINPUT : retval;
-      var = true;
-      break;
-    default :
-      return retval;
-  }
-
-  /* check group */
-  switch((retval = m_stable->type(a_grp, &type_grp))) {
-    case VLAD_OK :
-      /* in symtab so check if it is a group */
-      if (!VLAD_IDENT_IS_GROUP(type_grp))
-        return VLAD_INVALIDINPUT;
-      /* also check if it has the same base type as e if e is not a var */
-      if (!var && VLAD_IDENT_BASETYPE(type_elt) != VLAD_IDENT_BASETYPE(type_grp))
-        return VLAD_INVALIDINPUT;
-      break;
-    case VLAD_NOTFOUND :
-      /* not in symtab */
-      if (a_vlist == NULL)
-        return VLAD_INVALIDINPUT;
-      /* if this is a non-ground fact, check in the var list */
-      if ((retval = a_vlist->find(a_grp)) != VLAD_OK)
-        return (retval == VLAD_NOTFOUND) ? VLAD_INVALIDINPUT : retval;
-      break;
-    default :
-      return retval;
-  }
-
-  return VLAD_OK;
-}
-
-/*
- * verifies that g1 and g2 are in the symtab and that they are of the right
- * type, or listed in v if v is non-null
- */
-int vlad_polbase::verify_fact_subst(const char *a_grp1,
-                                    const char *a_grp2,
-                                    vlad_stringlist *a_vlist)
-{
-  int retval;
-  unsigned char type_grp1;
-  unsigned char type_grp2;
-  bool var = false;
-
-  if (a_grp1 == NULL || a_grp2 == NULL)
-    return VLAD_NULLPTR;
-
-  /* check group1 */
-  switch((retval = m_stable->type(a_grp1, &type_grp1))) {
-    case VLAD_OK :
-      /* in symtab so check if it is a group */
-      if (!VLAD_IDENT_IS_GROUP(type_grp1))
-        return VLAD_INVALIDINPUT;
-      break;
-    case VLAD_NOTFOUND :
-      /* not in symtab */
-      if (a_vlist == NULL)
-        return VLAD_INVALIDINPUT;
-      /* if this is a non-ground fact, check in the var list */
-      if ((retval = a_vlist->find(a_grp1)) != VLAD_OK)
-        return (retval == VLAD_NOTFOUND) ? VLAD_INVALIDINPUT : retval;
-      var = true;
-      break;
-    default :
-      return retval;
-  }
-
-  /* check group2 */
-  switch((retval = m_stable->type(a_grp2, &type_grp2))) {
-    case VLAD_OK :
-      /* in symtab so check if it is a group */
-      if (!VLAD_IDENT_IS_GROUP(type_grp2))
-        return VLAD_INVALIDINPUT;
-      /* also check if it has the same base type as g1 if g1 is not a var */
-      if (!var && VLAD_IDENT_BASETYPE(type_grp1) != VLAD_IDENT_BASETYPE(type_grp2))
-        return VLAD_INVALIDINPUT;
-      break;
-    case VLAD_NOTFOUND :
-      /* not in symtab */
-      if (a_vlist == NULL)
-        return VLAD_INVALIDINPUT;
-      /* if this is a non-ground fact, check in the var list */
-      if ((retval = a_vlist->find(a_grp2)) != VLAD_OK)
-        return (retval == VLAD_NOTFOUND) ? VLAD_INVALIDINPUT : retval;
-      break;
-    default :
-      return retval;
-  }
-
-  return VLAD_OK;
-}
-
-/* make sure fact is valid */
-int vlad_polbase::verify_fact(vlad_fact *a_fact, vlad_stringlist *a_vlist)
-{
-  int retval;
-  char *tmp1;
-  char *tmp2;
-  char *tmp3;
-  unsigned char type;
-  bool truth;
-
-  /* this function is only valid after the symtab is closed */
-  if (m_stage < 2)
-    return VLAD_INVALIDOP;
-
-  if ((retval = a_fact->get(&tmp1, &tmp2, &tmp3, &type, &truth)) != VLAD_OK)
-    return retval;
-
-  switch(type) {
-    case VLAD_ATOM_HOLDS :
-      return verify_fact_holds(tmp1, tmp2, tmp3, a_vlist);
-    case VLAD_ATOM_MEMBER :
-      return verify_fact_memb(tmp1, tmp2, a_vlist);
-    case VLAD_ATOM_SUBSET :
-      return verify_fact_subst(tmp1, tmp2, a_vlist);
-  }
-
-  return VLAD_INVALIDINPUT;
-}
-
-/* make sure expression e is valid */
-int vlad_polbase::verify_expression(vlad_expression *a_exp)
-{
-  int retval;
-  unsigned int i;
-  vlad_fact *tmp_fact;
-
-  if (a_exp == NULL)
-    return VLAD_NULLPTR;
-
-  for (i = 0; i < VLAD_LIST_LENGTH(a_exp); i++) {
-    if ((retval = a_exp->get(i, &tmp_fact)) != VLAD_OK)
-      return retval;
-    if ((retval = verify_fact(tmp_fact, NULL)) != VLAD_OK)
-      return retval;
-  }
-
-  return VLAD_OK;
-}
-
-#endif
-
 /* ground update, then make sure the expressions are valid */
 int vlad_polbase::ground_updateref(char *a_name, vlad_stringlist *a_ilist)
 {
